# mars-uav-sizing

./: .gitignore  AGENTS.md  CLAUDE.md  Mars_UAV.bib  README.md  after_table_spacer.lua  analyze_implications.py  build_docx.bat  bullet_to_word_list_bullet.lua  config.yaml  docx.defaults.en.yaml  docx.defaults.it.yaml  drone.md  drone_it.md  equation_block_style.lua  pyproject.toml  reconstruct.bat  reference.docx  run_analysis.ps1  run_matlab_analysis.bat  sizing_results.txt  source_grounding.txt  source_grounding.txt.deprecated  split.bat  strip_section_numbers.lua  subfig_grid_tblstyle.lua  table_body_style.lua
docs/: README_markdown_toolkit.md  document_structure.md  idea.txt  machingcharts_analysis_v2.txt  manuscript_corrections_plan.md  manuscript_fix_instructions.md  matchingcharts_analysis_v3.txt  phase_b_python_documentation.md  prompt_02_constraint_analysis.txt  prompt_02a_camera_data.txt  prompt_02b_radio_data.txt  prompt_02d_aerodynamic_coefficients.txt  prompt_02e_mass_fractions.txt  prompt_02g_load_factors.txt  prompt_02i_mission_parameters.txt  prompt_03a_rotorcraft_theory.txt  prompt_03c_hybrid_vtol_theory.txt  prompt_04_python_implementation.txt  regole_di_stile.txt  section4_style_violations_todo.md  section5_style_audit_todo.md  section5_style_violations_todo.md  source_attribution_design.md  style_rules.txt
reports/: baseline_report_$(date +%Y-%m-%d_%H%M%S).txt  coupled_run_2025-12-30_184910.txt  coupled_run_2025-12-30_191257.txt  coupled_run_2025-12-30_191849.txt  coupled_run_2025-12-30_191922.txt  uncoupled_run_2025-12-30_184957.txt  (+3 more)
(+367 files in other folders)
